# im_pfx_editor

./: .gitignore  CMakeLists.txt
src/: application.cpp  application.h  color.h  commands_registry.cpp  commands_registry.h  common.h  common_icons.cpp  common_icons.h  common_resources.cpp  common_resources.h  event_handler.h  fs_core.cpp  fs_core.h  fs_file_data.cpp  fs_file_data.h  fs_file_handle.cpp  fs_file_handle.h  gl_backend.cpp  gl_backend.h  gl_draw_mesh.cpp  gl_draw_mesh.h  gl_shader.cpp  gl_texture.cpp  gl_texture.h  img_goldsource_spr.cpp  img_goldsource_spr.h  img_indexed_from_memory.cpp  img_indexed_from_memory.h  imgui_helpers.cpp  imgui_helpers.h  imgui_listview_ex.cpp  imgui_listview_ex.h  imgui_popups.cpp  imgui_popups.h  imgui_shared.cpp  imgui_shared.h  lb3k_imgui_icons.cpp  lb3k_imgui_icons.h  loader_thread.cpp  loader_thread.h  (+31 more)
src/fs/: core.cpp  core.h  file_data.cpp  file_handle.cpp
src/gl/: backend.cpp  backend.h  shader.cpp  shader.h
src/glad/: glad.c
src/glad/glad/: glad.h
src/mini_goldsource/: enginefuncs.h  entity.h  event_api.h  goldsource.h  hud.h  math.h  pm_trace.h  types.h
src/spirinity/: particle_engine.cpp  particle_engine.h  particlemgr.cpp  particlesys.cpp  renderdefs.h
src/ui/: main_window.cpp  main_window.h  main_window_widgets.cpp  main_window_widgets.h  ui_options_pages.cpp  ui_options_pages.h  ui_styles_manager.cpp  ui_styles_manager.h
